# mariadb-server

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  crates.js  deny.toml  help.html  index.html  search-index.js  settings.html  src-files.js
.github/workflows/: validation-rust.yaml
client/: mysqladmin.cc  mysqlbinlog.cc
cmake/: rust.cmake
include/: bufcursor.h
include/mysql/: plugin.h  plugin_auth_common.h
mariadb/: all.html  enum.Value.html  index.html  macro.configure_logger!.html  macro.configure_logger.html  macro.error_once.html  macro.register_plugin_storage!.html  macro.register_plugin_storage.html  macro.warn_once.html  sidebar-items.js  struct.MemRoot.html  struct.TableShare.html  struct.Thd.html
mariadb/dbug/: attr.instrument.html  index.html
mariadb/my_alloc/: struct.MemRoot.html
mariadb/plugin/: enum.License.html  enum.Maturity.html  enum.PluginType.html  enum.SysVarOpt.html  index.html  macro.register_plugin.html  sidebar-items.js  struct.InitError.html  struct.SysVarConstString.html  struct.SysVarString.html  trait.Init.html
mariadb/service_sql/: enum.ClientError.html  index.html  sidebar-items.js  static.sql_service.html  struct.Connection.html  struct.ConnectionOpts.html  struct.Field.html  struct.FieldMeta.html  struct.Row.html  struct.Rows.html  type.ClientResult.html
mariadb/sql/: constant.MAX_DATA_LENGTH_FOR_KEY.html  constant.MAX_REFERENCE_PARTS.html  index.html  sidebar-items.js
mariadb/storage/: constant.MAX_RECORD_LENGTH.html  enum.StorageError.html  index.html  sidebar-items.js  struct.HandlertonCtx.html  struct.Mode.html  struct.OpenOp.html  trait.Handler.html  trait.Handlerton.html  type.StorageResult.html
mariadb/table/: struct.TableShare.html
mariadb/thd/: struct.Thd.html
mariadb/value/: enum.Value.html
mariadb_sys/: all.html  constant.Bitmap_BITS_PER_ELEMENT.html  constant.CLIENT_PLUGIN_AUTH.html  constant.CLIENT_PLUGIN_AUTH_LENENC_CLIENT_DATA.html  constant.ENCRYPTION_FLAG_DECRYPT.html  constant.ENCRYPTION_FLAG_ENCRYPT.html  constant.ENCRYPTION_FLAG_NOPAD.html  constant.ENCRYPTION_KEY_BUFFER_TOO_SMALL.html  constant.ENCRYPTION_KEY_NOT_ENCRYPTED.html  constant.ENCRYPTION_KEY_SYSTEM_DATA.html  constant.ENCRYPTION_KEY_TEMPORARY_DATA.html  constant.ENCRYPTION_KEY_VERSION_INVALID.html  constant.ENCRYPTION_SCHEME_BLOCK_LENGTH.html  constant.ENCRYPTION_SCHEME_KEY_INVALID.html  constant.HA_ADMIN_ALREADY_DONE.html  constant.HA_ADMIN_COMMIT_ERROR.html  constant.HA_ADMIN_CORRUPT.html  constant.HA_ADMIN_FAILED.html  constant.HA_ADMIN_INTERNAL_ERROR.html  constant.HA_ADMIN_INVALID.html  constant.HA_ADMIN_NEEDS_ALTER.html  constant.HA_ADMIN_NEEDS_CHECK.html  constant.HA_ADMIN_NEEDS_UPGRADE.html  constant.HA_ADMIN_NOT_BASE_TABLE.html  constant.HA_ADMIN_NOT_IMPLEMENTED.html  constant.HA_ADMIN_OK.html  constant.HA_ADMIN_REJECT.html  constant.HA_ADMIN_TRY_ALTER.html  constant.HA_ADMIN_WRONG_CHECKSUM.html  constant.HA_ANY_INDEX_MAY_BE_UNIQUE.html  constant.HA_AUTO_KEY.html  constant.HA_AUTO_PART_KEY.html  constant.HA_BINARY_PACK_KEY.html  constant.HA_BINLOG_FLAGS.html  constant.HA_BINLOG_ROW_CAPABLE.html  constant.HA_BINLOG_STMT_CAPABLE.html  constant.HA_BIT_PART.html  constant.HA_BLOB_PART.html  constant.HA_CACHE_TBL_ASKTRANSACT.html  constant.HA_CACHE_TBL_NOCACHE.html  (+1622 more)
mariadb_sys/Bitmap_Iterator__bindgen_ty_1/: constant.BITMAP_END.html  index.html  type.Type.html
mariadb_sys/Compare_keys/: constant.Equal.html  constant.EqualButComment.html  constant.EqualButKeyPartLength.html  constant.NotEqual.html  (+3 more)
mysys/: my_thr_init.c
rust/: CMakeLists.txt  Cargo.toml  cmake-helper.py  cmake_helper.py  deny.toml  run.py  run.sh  test.py
rust/bindings/: Cargo.toml  build.rs
rust/bindings/src/: hand_impls.rs  lib.rs  wrapper.h
rust/bridge/: handler_bridge.cc  handler_bridge.h
rust/common/encryption-common/: Cargo.toml
rust/common/encryption-common/src/: lib.rs
rust/examples/encryption-aes-rs/: Cargo.toml
rust/examples/encryption-aes-rs/src/: lib.rs
rust/examples/encryption-simple-rs/: Cargo.toml
rust/examples/encryption-simple-rs/src/: lib.rs
rust/examples/ftparser-simple/: Cargo.toml
rust/examples/ftparser-simple/src/: lib.rs
rust/examples/keymgt-basic-rs/: Cargo.toml
rust/examples/keymgt-basic-rs/src/: lib.rs
rust/examples/keymgt-debug-rs/: Cargo.toml
rust/examples/keymgt-debug-rs/src/: lib.rs
rust/examples/storage-csv/: Cargo.toml
rust/examples/storage-csv/src/: lib.rs
rust/examples/storage-simple/: Cargo.toml
rust/examples/storage-simple/src/: lib.rs
rust/macros/: Cargo.toml
rust/macros/src/: dbug.rs  lib.rs  register_plugin.rs
rust/macros/tests/: include.rs
rust/macros/tests/fail/: plugin-extra-args.stderr  plugin-extra-sysargs.rs  plugin-extra-sysargs.stderr  plugin-wrong-types.rs  plugin-wrong-types.stderr
rust/macros/tests/pass/: 02-with-init.rs  plugin-basic-enc.rs  plugin-sysargs.rs
rust/mariadb/: Cargo.toml  clippy.toml
rust/mariadb-sys/: Cargo.toml  build.rs
rust/mariadb-sys/src/: handler_helper.h  lib.rs  wrapper.h
rust/mariadb/src/: common.rs  helpers.rs  lib.rs  my_alloc.rs  plugin.rs  service_sql.rs  sql.rs  storage.rs  sys.rs  table.rs  tests.rs  thd.rs  util.rs  value.rs
rust/mariadb/src/plugin/: encryption.rs  encryption_wrapper.rs  ftparser.rs  storage.rs  storage_wrapper.rs  variables.rs  variables_parse.rs  wrapper.rs
rust/mariadb/src/service_sql/: error.rs  raw.rs
rust/mariadb/src/storage/: error.rs  handler.rs  handlerton.rs
rust/plugins/encryption-file-chacha/: Cargo.toml
rust/plugins/encryption-file-chacha/src/: lib.rs
rust/plugins/keymgt-clevis/: Cargo.toml  keymgt-clevis.test
rust/plugins/keymgt-clevis/src/: lib.rs
rust/scripts/: Dockerfile.prebuilt  build.sh  copy_plugins.sh  install.sh  launch_debug.sh  launch_quick.sh  my.cnf  run_mtr.sh  start.sh  start_safe.sh
rust/scripts/dockerfiles/: Dockerfile  Dockerfile.prebuilt
rust/scripts/launch/: install_run_maria.sh  launch_quick.sh
rust/test-runner/: Cargo.toml
sql/: CMakeLists.txt  bufcursor.c  handler_bridge.cc  log.cc  log_event.cc  log_event.h  log_event_client.cc  sql_prepare.cc
(+1036 files in other folders)
