[package]
name = "mariadb"
version = "0.1.0"
edition = '2021'
license = "GPL-2.0-only"


[dependencies]
mariadb-sys = { path = "../mariadb-sys" }
mariadb-macros = { path = "../macros" }
cstr = "0.2.11"
time = { version = "0.3.29", features = ["formatting"]}
log = "0.4.20"
env_logger = "0.10.0"
encoding_rs = "0.8.33"

# We use cargo features to segment off different areas of the MariaDB source that
# require specific linkage.
[features]
# Storage interfaces
storage = []
# Interfaces to use the sql service
service-sql = []
