[package]
name = "encryption-chacha"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"

[dependencies]
mariadb = { path = "../../mariadb" }
encryption-common = { path = "../../common/encryption-common" }
chacha20 = { version = "0.9.1", features = ["std"] }
chacha20poly1305 = { version = "0.10.1", default-features = false, features = ["std"] }
